shimlang/test_scripts/errors/fn_too_many_args0.stderr
 1 | fn test() {
 2 |     print("test");
 3 | }
 4 | 
 5 | test(1, 2, 3, 4);
     ^^^^^^^^^^^^^^^^
Error: Too many positional args, 4 remaining
